# github-analyzer

./: .gitignore  PROBLEM_DEFINITION.md  README.md  design_proposal.md  main.py  project.json  pyproject.toml  render.yaml
artifacts/: raw_gh_replies.json
backend/: .coverage  github_api.py  github_user.py  main.py  settings.py
backend/tests/: test_github_api.py  test_github_api_auth.py  test_github_user.py  test_main.py
docs/: frontend_backend_contracts.md  github_api_headers.md  github_oauth_proposal.md  standalone_migration_proposal.md  ticket_05.md  ticket_06.md  tickets.md
frontend/: README.md  app.component.html  app.component.ts  app.module.ts  github.service.ts  package-lock.json  package.json
frontend/src/: styles.css
frontend/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  chart_reproduce.spec.ts  github.service.ts
